refactor get categories by condition with scope eloquent
