# mobile_shop_api/app/Http/Controllers/CategoryController.php
@@ -24,9 +24,11 @@ class CategoryController extends Controller
      *  security={
      *      {"bearerAuth": {}}
      *  },
-     *  @OA\Parameter(name="sort", in="query", required=true, description="sort by column: 0-id, 1-name, 2-sort_no, 3-home, 4-image", @OA\Schema(type="integer", default="0", enum={0,1,2,3,4})),
+     *  @OA\Parameter(name="sort", in="query", required=true, description="sort by column: 0-id, 1-name, 2-sort_no, 3-home, 4-image, 5-created_at", @OA\Schema(type="integer", default="0", enum={0,1,2,3,4,5})),
      *  @OA\Parameter(name="order", in="query", required=true, description="sort by order: 0-ASC, 1-DESC", @OA\Schema(type="integer", default="0", enum={0,1})),
-     *  @OA\Parameter(name="per_page", in="query", required=true, description="sort by paginate page: 10, 25, 50, 100", @OA\Schema(type="integer", default="10", enum={10,25,50,100})),
+     *  @OA\Parameter(name="per_page", in="query", required=true, description="sort by paginate page: 0-10, 1-25, 2-50, 3-100", @OA\Schema(type="integer", default="0", enum={0,1,2,3})),
+     *  @OA\Parameter(name="start_date", in="query", required=false, description="start date to filter (dd/mm/yyyy)", @OA\Schema(type="string", format="date")),
+     *  @OA\Parameter(name="end_date", in="query", required=false, description="end date to filter (dd/mm/yyyy)", @OA\Schema(type="string", format="date")),
      *  @OA\Parameter(name="search", in="query", required=false, description="search by name", @OA\Schema(type="string")),
      *  @OA\Response(response=200, description="Success",
      *     @OA\JsonContent(
