# mobile_shop_api/app/Models/Category.php
@@ -3,6 +3,7 @@
 namespace App\Models;
 
 use App\Traits\SlugByNameTrait;
+use DateTime;
 use Exception;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
@@ -52,18 +53,79 @@ class Category extends Model
     protected $appends = [];
 
     /**
-     * Function get category with order condition
-     * 
-     * @param  array $page
-     * @return array 
+     * Scope a query to only include data between 2 given date
+     *
+     * @param  \Illuminate\Database\Eloquent\Builder  $query
+     * @param  date  $startDate
+     * @param  date  $endDate
+     * @return \Illuminate\Database\Eloquent\Builder
      */
-    public static function getCategoryWithOrder($page)
+    public function scopeOfDate($query, $startDate, $endDate)
     {
-        $search = isset($page['search']) ? $page['search'] : '';
-        $perPage = $page['per_page'];
-        $sortOrder = ($page['order'] == 1) ? 'DESC' : 'ASC';
+        $fromDate = DateTime::createFromFormat('d/m/Y', $startDate)->format('Y-m-d 00:00:00');
+        $toDate = DateTime::createFromFormat('d/m/Y', $endDate)->format('Y-m-d 23:59:59');
+
+        return $query->whereBetween('created_at', [$fromDate, $toDate]);
+    }
+
+    /**
+     * Scope a query to only include data of given search
+     *
+     * @param  \Illuminate\Database\Eloquent\Builder  $query
+     * @param  string  $search
+     * @return \Illuminate\Database\Eloquent\Builder
+     */
+    public function scopeOfSearch($query, $search)
+    {
+        return $query->where('name', 'LIKE', '%' . $search . '%');
+    }
+
+    /**
+     * Scope a query to only include data of given paginate
+     *
+     * @param  \Illuminate\Database\Eloquent\Builder  $query
+     * @param  int  $paginate
+     * @return \Illuminate\Database\Eloquent\Builder
+     */
+    public function scopeOfPaginate($query, $paginate)
+    {
+        $perPage = 100;
+
+        switch ($paginate) {
+            case 0:
+                $perPage = 10;
+                break;
+            case 1:
+                $perPage = 25;
+                break;
+            case 2:
+                $perPage = 50;
+                break;
+            case 3:
+                $perPage = 100;
+                break;
+            default:
+                $perPage = 100;
+                break;
+        }
+
+        return $query->paginate($perPage);
+    }
+
+    /**
+     * Scope a query to only include data of given column order
+     *
+     * @param  \Illuminate\Database\Eloquent\Builder  $query
+     * @param  int  $column
+     * @param  int  $order
+     * @return \Illuminate\Database\Eloquent\Builder
+     */
+    public function scopeOfOrderBy($query, $column, $order)
+    {
+        $sortOrder = ($order == 1) ? 'DESC' : 'ASC';
         $sortColumn = '';
-        switch ($page['sort']) {
+
+        switch ($column) {
             case 0:
                 $sortColumn = 'id';
                 break;
@@ -79,13 +141,33 @@ class Category extends Model
             case 4:
                 $sortColumn = 'image';
                 break;
+            case 5:
+                $sortColumn = 'created_at';
+                break;
             default:
                 throw new Exception("Không tìm thấy trường này");
                 break;
         }
-        return Category::when($search, function ($query, $search) {
-            $query->where('name', 'LIKE', '%' . $search . '%');
-        })->orderBy($sortColumn, $sortOrder)->paginate($perPage);
+
+        return $query->orderBy($sortColumn, $sortOrder);
+    }
+
+    /**
+     * Function get category with order condition
+     * 
+     * @param  array $page
+     * @return array 
+     */
+    public static function getCategoryWithOrder($page)
+    {
+        $search = isset($page['search']) ? $page['search'] : '';
+        $startDate = isset($page['start_date']) ? $page['start_date'] : '01/01/2000';
+        $endDate = isset($page['end_date']) ? $page['end_date'] : now()->format('d/m/Y');
+
+        return Category::ofSearch($search)
+            ->ofDate($startDate, $endDate)
+            ->ofOrderBy($page['sort'], $page['order'])
+            ->ofPaginate($page['per_page']);
     }
 
     /**
@@ -143,6 +225,7 @@ class Category extends Model
     public static function removeImageDirectory($id)
     {
         $directory = Category::DIRECTORY_PATH . $id;
+
         if (Storage::exists($directory)) {
             Storage::deleteDirectory($directory);
         }
